--- a/index.html
+++ b/index.html
@@ -1,59 +1,50 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title> BIODATA DIRI </title>
-<head>
-</body>
-    <h1 style=text-align:center;background-color:pink;"> &#9194;Queena Nawangwulan Hendranto&#9193;</h1>
-    <h3 style=text-align:center;background-color:black;"><button> :***Anak kesayangan bubu***</button></h3>
 
-
-
-    <ul>
-    	<li> <strong>Tempat Tanggal Lahir </strong> = Tangerang, 07 Maret 2003 </li>
-    	<li> Usia                  = 17 Tahun</li>
-    	<li> Jenis Kelamin         = Perempuan </li>
-    	<li> Agama                 = Islam </li>
-    	<li> Kewarganegaraan       = WNI </li>
-    	<li> Makanan kesukaan      = Risol
-    	<li> Pacar                 = Belum nemu </li>
-    	<li> Gebetan               = Baru 2 </li>
-    	<li> Alamat    			   = Taman Yasmin Jl. Raflesia raya no.22 </li>
-    	<li> Anak ke 			   = 2 </li>
-    	<li> Saudara 			   = 3 </li>
-    	<li> Hobi 				   = Makan, baca buku, denger lagu, gambar. </li>
-    	<li> Tinggi badan          = 162 cm </li>
-    	<li> Cita-cita             = Membahagiakan ortu </li>
-    	<li> Motto Hidup 		   = See my SELF not my PERSONA </li>
-    </ul>
-</body>
-<!DOCTYPE html>
-<html>
+ <html>
 <head>
-	<title></title>
-</head>
+<title> BIODATA </title>
+
+<link rel="stylesheet" type="text/css" href="index.css">
+
 <body>
-	<h4 style="background-color:Pink;"> DATA KELUARGA</h4>
 
-	<ul>
-		<li> Ayah      = Eko Hendranto</li>
-	    Pekerjaan      = Wiraswasta</li>
-	    <li> Ibu       = Dhian Anggraeny R.A.</li>
-	    Pekerjaan      = Ibu rumah tangga</li>
+<h1>BIODATA</h1>
 
-	 </ul>
-	 <h5 style="background-color:Pink;">RIWAYAT PENDIDIKAN</h5>
-	 <ul>
-	 	<h5>1. TK Teladan Pakuan, Bogor
-	 	<h5>2. SDN Cilendek 1, Bogor  </h5>
-	 	<h5>3. SMP PGRI 8, Bogor </h5>
-	 	<h5>4. SMK-SMAK Bogor, Bogor </h5>
-	 </ul>
-	 <body> </body>
-	 <head></head>
+<br>
+<h2>Nama
+: Queena
+</h2>
 
-	 <h6 style=text-align:center;> &#9899;"Terima kasih" &#9899;
-	 </h6>
-	   <img src="foto queena dan idola.png" width="400px" height="300px"/>
-	  </body>
-	  </html>
+<h2>TTL
+: Tangerang, 7 Maret 2003
+</h2>
+
+<h2>Usia
+: 17 tahun
+</h2>
+
+<h2>Pendidkan
+: SMK-SMAK Bogor (2018-sekarang)</h2>
+
+<h2>Hobi
+: denger lagu, gambar</h2>
+
+<h2>Makanan kesukaan
+: mi kuah</h2>
+
+<h2>Minuman kesukaan
+: kuah mi </h2>
+
+
+<br><h1>about me</h1>
+
+<p>
+Halloo.. nama lengkap saya Queena Nawangwulan Hendranto. Saya lahir di Tangerang 7 maret 2003 jadi saya baru aja 17 tahun. Saya besar dan tinggal di kota Bogor bersama orang tua saya. Saya sekarang berada di kelas 11 smk-smak Bogor. Saya suka mendengarkan lagu, terutama lagu bergenre bedroom pop. Saya juga suka membaca buku. Biasanya saya membaca buku cerita petualangan atau misteri tapi akhir akhir ini saya sangat tertarik dengan filsafat dan psikologi. Saya juga suka menggambar walaupun gambaran saya tak enak dipandang. Idola saya adalah Shawn Mendes dan Kim Nam Joon. Film favorit saya adalah mother!, parasite, oliver twist, Harry potter series, dan banyaakk lagi. Buku favorit saya adalah serial lima sekawan, goosebumps, dan terkadang saya membaca komik di aplikasi webtoon.
+</p>
+
+
+<h3> <img src="queena.png"> </h3>
+
+</body>
+
+</html>
